objects/pse__Resource_Planner_Preferences__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>User preferences that determine the look and feel of the resource planner.</description>
    <fields>
        <fullName>pse__Display_Decimal_Precision_Cutoff__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Maximum (non-inclusive) number of hours to render fractional precision in Planner.</description>
        <inlineHelpText>The maximum number of hours for which to display decimal places. For example, if set to 100, decimal precision displays for 100 hours or less. The default value is &quot;100&quot;</inlineHelpText>
        <label>Display Decimal Precision Cutoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hide_Inline_Dialog__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting determines whether or not to hide the edit mode settings dialog.</inlineHelpText>
        <label>Hide Inline Edit Dialog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Inline_Edit_Mode_THHC__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This setting determines how inline editing of assignments affects total assignment hours and end date.</inlineHelpText>
        <label>Hold total assignment hours constant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Lower_Threshold_Summary_Bar_Limit__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Defines the lower limit of the resource allocation percentage considered correctly allocated. Resources within this threshold display as the green  resource summary color code used in Resource Planner.</description>
        <inlineHelpText>Defines the lower limit of the resource allocation percentage considered correctly allocated. Resources within this threshold display as the green  resource summary color code used in Resource Planner.</inlineHelpText>
        <label>lower threshold summary bar limit</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Availability_In_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, availability displays in hours in the Resource Availability column in the Resource Planner. If deselected, availability displays as a percentage. This value is deselected by default.</description>
        <inlineHelpText>If selected, availability displays in hours in the Resource Availability column in the Resource Planner. If deselected, availability displays as a percentage. This value is deselected by default.</inlineHelpText>
        <label>Resource Availability in Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Holiday_Icon__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, the palm tree icon is displayed in resource bars to indicate holidays.</description>
        <inlineHelpText>If selected, the palm tree icon is displayed in resource bars to indicate holidays.</inlineHelpText>
        <label>Show Holiday Icon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Shift_Schedule_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, Shift Management assignments display in Planners.</inlineHelpText>
        <label>Show Shift Management Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Upper_Threshold_Summary_Bar_Limit__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Defines the upper limit of the resource allocation percentage considered correctly allocated. Resources within this threshold display as the green resource summary color code used in Resource Planner.</description>
        <inlineHelpText>Defines the upper limit of the resource allocation percentage considered correctly allocated. Resources within this threshold display as the green  resource summary color code used in Resource Planner.</inlineHelpText>
        <label>Upper threshold summary bar limit</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Use_Utilization_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the Utilization Target field on the Resource is used to determine red/yellow/green colors in Resource Planner, not 100% of work calendar hours.</description>
        <inlineHelpText>If selected, the Utilization Target field on the Resource is used to determine red/yellow/green colors in Resource Planner, not 100% of work calendar hours.</inlineHelpText>
        <label>Use Utilization Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Zoom_Level__c</fullName>
        <defaultValue>&quot;week&quot;</defaultValue>
        <inlineHelpText>The default timeline zoom level. Enter a value of quarter, month, week or day. The default value is &quot;week&quot;.</inlineHelpText>
        <label>Zoom Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Planners Preferences - Resource</label>
</CustomObject>